fix hover and project about on mobile

--- a/src/components/Banner/style.module.scss
+++ b/src/components/Banner/style.module.scss
@@ -1,5 +1,6 @@
 @import "../../styles/constants.scss";
 @import "../../styles/mixins.module.scss";
+@import "../../styles/breakpoints.module.scss";
 
 
 .banner-container{
@@ -30,5 +31,7 @@
 }
 
 .icon-list *:hover{
-    @include hover()
+    @include xs-breakpoint{
+        @include hover()
+    }
 }
