--- a/src/components/Page/style.module.scss
+++ b/src/components/Page/style.module.scss
@@ -28,7 +28,7 @@
 }
 
 .project-sub {
-    width: 400px;
+    max-width: 400px;
     text-align: center;
     font-size: $medium;
     font-weight: $heavy;
